--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Ieman is testing
+title: Ieman is testing-2
 
 # Your name to show in the footer
 author: Ieman Mohamed 
