--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Ieman is testing-2
+title: Ieman is testing 2
 
 # Your name to show in the footer
 author: Ieman Mohamed 
@@ -71,9 +71,9 @@ rss-description: This website shows that Ieman is learning
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  linkedin: false
   vk: false
 
 # How to display the link to your website in the footer
