--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@
 # Name of website
 title: Ieman is testing 2
 
+# Short description of your site
+description: A virtual proof that I'm awesome
+
 # Your name to show in the footer
 author: Ieman Mohamed 
 
