--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Ieman is testing 
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: A virtual proof that Ieman is learning 
 
 # Your name to show in the footer
 author: Ieman Mohamed 
